--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "author": "Semmi Verian <semmivp1@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "express": "4.17.1"
+    "express": "4.17.1",
+    "pg": "7.14.0",
+    "sequelize": "5.21.2"
   }
 }
