adding starter docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,7 @@
 version: '3.6'
 
 services:
-  express:
-    build: .
-    volumes:
-      - '.:/usr/local/application'
-      - '/usr/local/application/node_modules'
-    ports:
-      - '3000:3000'
-  postgres:
-    image: 'postgres:10-alpine'
-    restart: always
-    volumes:
-      - db-data:/var/lib/postgresql/data
-    environment:
-      POSTGRES_USER: semmiverian
-      POSTGRES_PASSWORD: password
-    ports:
-      - '5433:5432'
+  # Daftar container yang akan kita buat secara bersamaan
 volumes:
+  # Volume digunakan untuk menyimpan data ( persistance ) kasus kali ini untuk menyimpan data di database
   db-data:
