--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   express:
     build: .
     volumes:
-      - '.:/usr/local/application'
+      - '.:/usr/local/application/app'
       - '/usr/local/application/node_modules'
     ports:
       - '3000:3000'
